# backend

./: .gitignore  Dockerfile  README.md  alembic.ini  dependencies.py  docker-compose.yaml  pyproject.toml
.configs/: app.example.toml  db.example.env  test.toml
.github/workflows/: lint_test.yaml
src/journal_backend/: __main__.py  app_setup.py  config.py  consts.py  depends_stub.py
src/journal_backend/admin/: auth_provider.py  views.py
src/journal_backend/database/: dependencies.py
src/journal_backend/entity/: models.py
src/journal_backend/entity/academic_reports/: dto.py  models.py  router.py
src/journal_backend/entity/classes/: dependencies.py  dto.py  exceptions.py  models.py  repository.py
src/journal_backend/entity/common/: dependencies.py  email_sender.py  pagination.py
src/journal_backend/entity/students/: dependencies.py  dto.py  enums.py  exceptions.py  models.py  repository.py  router.py  service.py
src/journal_backend/entity/teachers/: dependencies.py  dto.py  exceptions.py  models.py  repository.py  router.py  service.py
src/journal_backend/entity/users/: dependencies.py  dto.py  enums.py  exceptions.py  mixins.py  models.py  repository.py  router.py  service.py
src/journal_backend/entity/users/students/: dependencies.py  dto.py  models.py  repository.py  router.py  service.py
src/journal_backend/entity/users/teachers/: dependencies.py  dto.py  models.py  repository.py  router.py  schemas.py  service.py
src/journal_backend/migrations/: env.py
src/journal_backend/migrations/versions/: 395d6201c542_initial.py  773fd8797246_move_admission_year_attr_to_group_.py  7ebe4bee0222_add_unique_constraints.py  d9e48525b729_initial.py  e1f6f915f500_initial.py  f30afae0c652_initial.py
src/journal_backend/tests/integration/: conftest.py
src/journal_backend/tests/unit/: conftest.py  test_register_user.py
