[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "journal_backend"
version = "0.1.0"
description = "Backend for the sirius-journal."
authors = [
    {name = "akiko23", email = "dmvasilenko43@gmail.com"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "psycopg==3.1.18",
    "psycopg-binary==3.1.18",
    "SQLAlchemy==2.0.23",
    "alembic==1.12.1",
    "uvicorn==0.24.0.post1",
    "pydantic[email]==2.5.2",
    "fastapi-users==12.1.2",
    "fastapi-users-db-sqlalchemy==6.0.1",
    "toml==0.10.2",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]
lint = [
    "mypy==1.7.1",
    "isort==5.12.0",
    "ruff==0.1.6",
]

[project.urls]
"Homepage" = "https://github.com/Sirius-journal-app/backend"
"Bug Tracker" = "https://github.com/Sirius-journal-app/backend/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "src",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".idea",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".configs/db.env",
]

# Same as Black.
line-length = 98
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# Isort configuration
[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3


[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false